--- a/namu darbai/css/style14.css
+++ b/namu darbai/css/style14.css
@@ -1,8 +1,60 @@
-body{
+[class^="col-"]{
+  float: left;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: }
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+
+
+
+html{
+  margin: 5px;
   border: 2px solid black;
 }
 ul{
+  text-align: center;
   list-style: none;
   color: red;
+}
+  ul li {
+    display: inline-block;
+    margin: 3px;
+}
+a {
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
 
+}
+
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+}
+strong {
+  border-bottom: 1px solid black;
+}
+nav {
+  border-bottom: 3px solid black;
+}
+.images {
+  padding: 5px;
+}
+img{
+  width: 100%;
+}
+footer{
+  
+  text-align: center;
 }
