--- a/namu darbai/css/style17.css
+++ b/namu darbai/css/style17.css
@@ -8,11 +8,15 @@
   width: 100px;
   height:60px;
   text-align: left;
+  float: left;
+  box-shadow: 1px 2px 2px black;
 
 }
 .container {
-  float: left;
+width: 850px;
+height: 80px;
 }
+
 .col1{
   text-align: center;
   background-color: yellow;
