--- a/baigiamasis projektas crm/public/css/style.css
+++ b/baigiamasis projektas crm/public/css/style.css
@@ -1,3 +1,4 @@
+
 html, body {
                 background-color: #fff;
                 color: #636b6f;
@@ -6,7 +7,26 @@ html, body {
                 height: 100vh;
                 margin: 0;
             }
-
+            .advert_head{
+                margin-left: 100px;
+            }
+            .links{
+                text-align: center;
+            }
+            
+            h1{
+                margin-top: 0px !important;
+            }
+            .navbar-nav>li>a{
+                padding: 5px !important;
+                margin-bottom: 0px !important;
+            }
+            .nav>li>a{
+                text-decoration: none;
+                color: black;
+                padding: 1px;
+                margin-bottom: 0px !important;
+            }
             .full-height {
                 height: 100vh;
             }
